[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "forwarder"
urls = {homepage="https://github.com/ess-dmsc/forwarder", repository="https://github.com/ess-dmsc/forwarder"}
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]

[tool.setuptools]
packages = ["forwarder"]

[tool.setuptools_scm]

[tool.black]
exclude = '/(venv*|.tox)'

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E501", "E203", "E402", "W503", "Q000", "W293"]
# E501 & E203: Formatting handled by Black
# E402 complains about imports not being at the top
# W503 complains about splitting if across lines which conflicts with Black
# Q000 complains about using "" and not '' which conflicts with Black
# W293 blank lines with whitespace, conflicts with Black in doc comments
exclude = ["f142_logdata", "README.md"]

[tool.pytest.ini_options]
markers = [
    "epics_protocol: (EpicsProtocol) The protocol used for the test",
    "schema: (str) The streaming-data-type of the test",
    "serialiser_update_period_ms: (int) Update period (ms) for any created Serialiser",
]
testpaths = [
    "tests",
]
addopts = "-s"
junit_family = "xunit2"

[tool.coverage.run]
branch = true
source = ["forwarder"]

[tool.coverage.report]
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310
isolated_build = true
skipsdist=true

[testenv]
deps =
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/requirements-dev.txt
commands =
    python -m pytest {posargs}
"""

[tool.mypy]
python_version = 3.7
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streaming_data_types.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "graypy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "caproto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "p4p.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "configargparse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flatbuffers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "integration_tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "forwarder.repeat_timer.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "contract_tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "integration_tests.smoke_tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "attr.*"
ignore_errors = true

